--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
-language: csharp  
-sudo: required  
-dist: trusty  
-mono: none
-dotnet: 2.0.0-preview2-006497
-before_script:
-  - dotnet restore
-script:  
-  - dotnet test ./ThinkingHome.Migrator.Tests -c Release -f netcoreapp2.0
+language: csharp
+solution: solution-name.sln
+mono:
+  - latest
+  - 3.12.0
+  - 3.10.0
