--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: csharp
-solution: Client.sln
-sudo: false
+mono: none
+dist: xenial
+dotnet: 3.1
+install:
+  - dotnet restore
+script:
+  - dotnet build
+  - dotnet test Client/Client.csproj
