--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: csharp 
-sudo: required 
 mono: none 
-dotnet: 3.0 
-os: - linux 
+dotnet: 3.1
+os: linux 
 before_script: 
 - dotnet restore ".\Client\Client.sln" 
 script: 
 - dotnet build ".\Client\Client.sln" -c Release 
-- dotnet test ".\Client\Client.sln" -c Release -v n
