--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: csharp 
 mono: none 
-dotnet: 3.1
+dotnet: latest
 os: linux 
 before_script: 
-- dotnet restore ".\Client\Client.sln" 
+- dotnet restore 
 script: 
 - dotnet build ".\Client\Client.sln" -c Release 
