--- a/Client/App.config
+++ b/Client/App.config
@@ -2,5 +2,5 @@
 <configuration>
     <startup> 
         
-    <supportedRuntime version="v2.0.50727"/></startup>
+    <supportedRuntime version="v2.0" sku=".NETFramework,Version=v3.0.103"/></startup>
 </configuration>
