--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="BussinesTripInfo.cs" />
     <Compile Include="Client.cs" />
+    <Compile Include="FactoryInfo.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
