--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -55,6 +55,8 @@
     <Compile Include="BussinesTripInfo.cs" />
     <Compile Include="DocumentGenerator.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="Employees.cs" />
+    <Compile Include="FactoryInfo.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
