--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="BussinesTripInfo.cs" />
     <Compile Include="Client.cs" />
+    <Compile Include="EmployeesFactoryInfo.cs" />
     <Compile Include="FactoryInfo.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -67,6 +68,24 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpdatingFactoriesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UpdatingFactoriesForm.Designer.cs">
+      <DependentUpon>UpdatingFactoriesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UpdatingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UpdatingForm.Designer.cs">
+      <DependentUpon>UpdatingForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UpdatingFormEmployees.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UpdatingFormEmployees.Designer.cs">
+      <DependentUpon>UpdatingFormEmployees.cs</DependentUpon>
+    </Compile>
     <Compile Include="User.cs" />
     <Compile Include="Utilites.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -85,6 +104,15 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UpdatingFactoriesForm.resx">
+      <DependentUpon>UpdatingFactoriesForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UpdatingForm.resx">
+      <DependentUpon>UpdatingForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UpdatingFormEmployees.resx">
+      <DependentUpon>UpdatingFormEmployees.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
