--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -56,6 +56,7 @@
     <Compile Include="DocumentGenerator.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="Employees.cs" />
+    <Compile Include="EmployeesFactoryInfo.cs" />
     <Compile Include="FactoryInfo.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
